frontend/test/should_pass/induced_004.grg
induced rule r {
	pattern {
		x:Node --> y:Node;
		x --> z:Node;
		y --> y;
	}
	replace {
	}
}

